feat: implement new device name standard
This new implementation uses the following device names:
<4 digit hash of device type name>-<last 6 digits of MAC>

The POST /device endpoint uses the name to infer the type from the hash.
